--- a/src/FAST-LIVO2/CMakeLists.txt
+++ b/src/FAST-LIVO2/CMakeLists.txt
@@ -97,16 +97,14 @@ find_package(catkin REQUIRED COMPONENTS
 find_package(Eigen3 REQUIRED)
 find_package(PCL REQUIRED)
 find_package(OpenCV REQUIRED)
-
-# Find Sophus and manually link to libSophus.so
-FIND_PACKAGE(Sophus REQUIRED)
-set(Sophus_LIBRARIES "/usr/local/lib/libSophus.so")
-
-
-# Make sure Boost is found
+find_package(Sophus REQUIRED)
 find_package(Boost REQUIRED COMPONENTS thread)
 
-
+# Define the catkin package
+catkin_package(
+  CATKIN_DEPENDS geometry_msgs nav_msgs roscpp rospy std_msgs message_runtime cv_bridge vikit_common vikit_ros image_transport
+  DEPENDS EIGEN3 PCL OpenCV Sophus
+)
 
 # Include directories for dependencies
 include_directories(
@@ -118,12 +116,6 @@ include_directories(
   include
 )
 
-# Define the catkin package
-catkin_package(
-  CATKIN_DEPENDS geometry_msgs nav_msgs roscpp rospy std_msgs message_runtime cv_bridge vikit_common vikit_ros image_transport
-  DEPENDS EIGEN3 PCL OpenCV Sophus
-)
-
 # Add libraries
 add_library(vio src/vio.cpp src/frame.cpp src/visual_point.cpp)
 add_library(lio src/voxel_map.cpp)
@@ -132,8 +124,7 @@ add_library(imu_proc src/IMU_Processing.cpp)
 add_library(laser_mapping src/LIVMapper.cpp)
 
 # Add the main executable
-add_executable(fastlivo_mapping src/main.cpp
-)
+add_executable(fastlivo_mapping src/main.cpp)
 
 # Link libraries to the executable
 target_link_libraries(fastlivo_mapping
@@ -145,7 +136,7 @@ target_link_libraries(fastlivo_mapping
   ${catkin_LIBRARIES}
   ${PCL_LIBRARIES}
   ${OpenCV_LIBRARIES}
-  ${Sophus_LIBRARIES}  # Ensure linking to libSophus.so
+  ${Sophus_LIBRARIES}
   ${Boost_LIBRARIES}
 )
 
@@ -153,4 +144,3 @@ target_link_libraries(fastlivo_mapping
 if(mimalloc_FOUND)
   target_link_libraries(fastlivo_mapping mimalloc)
 endif()
-
